# recreation

./: recreation.cabal
src/: BridgeAndTorch.hs  FindPath.hs  GloveSelection.hs  Main.hs  MissionariesCannibals.hs  NPuzzle.hs  Problem.hs  RowAndColumnExchanges.hs  Search.hs  Sokoban.hs
