cabal-version:      3.4
name:               recreation
version:            0.1.0.0
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable recreation
    import:           warnings
    main-is:          Main.hs
    other-modules:
        BridgeAndTorch,
        FindPath,
        GloveSelection,
        MissionariesCannibals,
        NPuzzle,
        Problem,
        RowAndColumnExchanges,
        Search,
        Sokoban,
    build-depends:
        base ^>=4.18.2.0,
        containers,
        mtl,
        pqueue,
        terminal,
        text,
        vector,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields,
        LambdaCase,
        OverloadedRecordDot,
        OverloadedStrings

